<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <ImageView
        android:id="@+id/Byoubu"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hinamatsuri_byoubu_gold" />

    <ImageView
        android:id="@+id/playerImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/comImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Byoubu"
        app:srcCompat="@drawable/animalface_tora" />

    <ImageView
        android:id="@+id/comImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Byoubu"
        app:srcCompat="@drawable/animalface_tora" />

    <ImageView
        android:id="@+id/resultImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dance_yorokobi_mai_woman" />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/resultImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comImage" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/youText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you"
        app:layout_constraintBottom_toTopOf="@+id/playerImage"
        app:layout_constraintEnd_toEndOf="@+id/playerImage"
        app:layout_constraintStart_toStartOf="@+id/playerImage" />

    <TextView
        android:id="@+id/comText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com"
        app:layout_constraintBottom_toTopOf="@+id/comImage"
        app:layout_constraintEnd_toEndOf="@+id/comImage"
        app:layout_constraintStart_toStartOf="@+id/comImage" />
</androidx.constraintlayout.widget.ConstraintLayout>